Added node version for deployment

--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "dashboard-test",
   "version": "0.1.0",
+  "engines": {
+    "node": "14.17.6"
+  },
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^1.0.15",
