--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dashboard-test",
+  "name": "user-registration",
   "version": "0.1.0",
   "engines": {
     "node": "14.17.6"
@@ -52,6 +52,7 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://localhost:5000",
   "devDependencies": {
     "@types/react-redux": "^7.1.18",
     "@types/react-router-dom": "^5.1.9",
